[package]
name = "tinymd"
version = "0.1.0"
authors = ["Bum June Kim <bjbj6363@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorials."
homepage = "https://jesselawson.org/rust/getting-started-with-rust-by-building-a-tiny-markdown-compiler/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
